[gd_scene load_steps=5 format=2]

[ext_resource path="res://Recursos/BarraHP/HPProgress.png" type="Texture" id=1]
[ext_resource path="res://Recursos/Sprites/NPCs/HomemNegroFrente.png" type="Texture" id=2]
[ext_resource path="res://Recursos/Planos de Fundo/debate_plano_de_fundo.jpg" type="Texture" id=3]
[ext_resource path="res://vitoria.gd" type="Script" id=4]

[node name="vitoria" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1278.0
margin_bottom = 718.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HomemNegroFrente" type="Sprite" parent="TextureRect"]
position = Vector2( 648, 373 )
texture = ExtResource( 2 )

[node name="HpProgress" type="Sprite" parent="TextureRect/HomemNegroFrente"]
position = Vector2( 13, 0 )
scale = Vector2( 1, 2.11111 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="TextureRect/HomemNegroFrente/HpProgress"]
margin_left = -293.0
margin_top = -22.7368
margin_right = 293.0
margin_bottom = 32.2632
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 57.0
margin_top = 567.0
margin_right = 204.0
margin_bottom = 637.0
text = "continuar"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
